--- a/model/model.csproj
+++ b/model/model.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -10,13 +10,14 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>model</RootNamespace>
     <AssemblyName>model</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
     <OldToolsVersion>3.5</OldToolsVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -26,6 +27,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -34,6 +36,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -51,23 +54,44 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attachable.cs" />
+    <Compile Include="AttachableCollection.cs" />
     <Compile Include="BatchSqlParser.cs" />
     <Compile Include="Column.cs" />
+    <Compile Include="DefaultCollection.cs" />
+    <Compile Include="ColumnDiff.cs" />
     <Compile Include="ColumnList.cs" />
     <Compile Include="ConfigHelper.cs" />
     <Compile Include="Constraint.cs" />
     <Compile Include="Database.cs" />
+    <Compile Include="DatabaseDiff.cs" />
+    <Compile Include="DataException.cs" />
+    <Compile Include="DataFileException.cs" />
     <Compile Include="DBHelper.cs" />
     <Compile Include="DbProperty.cs" />
+    <Compile Include="DbPropertyCollection.cs" />
     <Compile Include="Default.cs" />
-    <Compile Include="Exceptions.cs" />
+    <Compile Include="BatchSqlFileException.cs" />
     <Compile Include="ForeignKey.cs" />
+    <Compile Include="IdentityCollection.cs" />
+    <Compile Include="ForeignKeyCollection.cs" />
     <Compile Include="Identity.cs" />
-    <Compile Include="IScriptable.cs" />
+    <Compile Include="ColumnCollection.cs" />
+    <Compile Include="ConstraintCollection.cs" />
+    <Compile Include="Schema.cs" />
+    <Compile Include="SchemaCollection.cs" />
+    <Compile Include="DatabaseObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Routine.cs" />
-    <Compile Include="RoutineList.cs" />
+    <Compile Include="RoutineCollection.cs" />
+    <Compile Include="DatabaseObjectCollection.cs" />
+    <Compile Include="Scriptable.cs" />
+    <Compile Include="SqlBatchException.cs" />
+    <Compile Include="SqlFileException.cs" />
+    <Compile Include="State.cs" />
     <Compile Include="Table.cs" />
+    <Compile Include="TableCollection.cs" />
+    <Compile Include="TableDiff.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
