--- a/console/console.csproj
+++ b/console/console.csproj
@@ -57,12 +57,9 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ManyConsole, Version=0.4.2.17, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ManyConsole.0.4.2.17\lib\ManyConsole.dll</HintPath>
+    <Reference Include="FubuCore, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FubuCore.1.3.0.278\lib\FubuCore.dll</HintPath>
       <Private>True</Private>
-    </Reference>
-    <Reference Include="NDesk.Options">
-      <HintPath>..\packages\NDesk.Options.0.2.1\lib\NDesk.Options.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -74,7 +71,7 @@
   <ItemGroup>
     <Compile Include="Compare.cs" />
     <Compile Include="Create.cs" />
-    <Compile Include="DbCommand.cs" />
+    <Compile Include="DbCommandInput.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Script.cs" />
@@ -130,7 +127,7 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>$(SolutionDir)\packages\ilmerge.2.14.1208\tools\ilmerge /target:exe /out:schemazen.exe console.exe model.dll ManyConsole.dll NDesk.Options.dll
+    <PostBuildEvent>$(SolutionDir)\packages\ilmerge.2.14.1208\tools\ilmerge /target:exe /out:schemazen.exe console.exe model.dll FubuCore.dll
 </PostBuildEvent>
   </PropertyGroup>
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
