--- a/console/packages.config
+++ b/console/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FubuCore" version="1.3.0.278" targetFramework="net46" userInstalled="true" />
   <package id="ILMerge" version="2.14.1208" targetFramework="net46" userInstalled="true" />
-  <package id="ManyConsole" version="0.4.2.17" targetFramework="net46" userInstalled="true" />
-  <package id="NDesk.Options" version="0.2.1" targetFramework="net35" userInstalled="true" />
 </packages>
